# github-actions

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/actions/setup-aws-cli/: action.yaml
.github/workflows/: 10_Testing Workflow.yaml  11_Deploy_workflow_run.yaml  12_Schedule_Workflow.yaml  13_Push_Pull_Request_Event.yaml  14_Accessing_Secrets.yaml  15_Publish_Docker_Image.yaml  15_Publish_Docker_Image_DockerHub.yaml  16_Publish_Docker_Image_GHCR.yaml  17_AWS_CLI_Workflow.yaml  18_Use_published_Action.yaml  1_basic_workflow.yaml  2_Variables.yaml  3_variables_based_on_environment.yaml  4_Run_Tests_Upload_artifacts.yaml  5_Download_Artifact_share_with_other_job.yaml  6_expressions.yaml  7_continue_on_error_and_timeout.yaml  8_strategy_matrix.yaml  8_strategy_matrix_and_fail_fast.yaml  9_Reusable_Workflow.yaml  Common_Workflow.yaml
src/: app.py
tests/: test_app.py
