[tool.poetry]
name = "github-actions"
version = "0.1.0"
description = ""
authors = ["Sumanshu Nankana <sumanshunankana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-html = "^4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
